--- a/style_perfum.css
+++ b/style_perfum.css
@@ -3,83 +3,85 @@
     margin: 0%;
 }
 html{
-    width: 1440px;
-    height: 800px;
+    min-width: 1440px;
 }
 
 body {
     background-color:hsl(30, 38%, 92%);
     width: 1440px;
     height: 800px;
+    display:table-cell;
+    vertical-align: middle;
+    
 }
 /*Caja contenendora*/
 .container{
     background-color: hsl(0, 0%, 100%);;
     display: flex; /*sirve para poner una caja al lado de otra*/
-    max-width:1200px ;
+    max-width:600px ;
     width: 100%;
-    height: 900px;
-    margin-top:10%;
-    margin-left: 20%;
-    margin-right: 20%;
-    margin-bottom: 0%;
+    height: 450px;
+    margin-left: auto;
+    margin-right: auto;
     border-radius: 20px;
     align-items:flex-start;
 }
 /*Parte blanca*/
 .blanco{
     background-color: #ffffff;
-    width: 600px;
-    height: 900px;
+    width: 300px;
+    height: 450px;
     border-radius: 20px;
+    font-size: 14px;
 }
  /*Titulo perfume*/
     h1 { 
         padding: 6%;
-        font-size: 70px;
+        font-size: 35px;
         font-family: Fraunces,serif;
         font-weight: 800;
         color: hsl(212, 21%, 14%);
-        margin: auto;
+        width: 230px;
     }
     h2{
         padding: 6%;
+        padding-bottom: 0%;
         text-align: left;  
         font-family: Monserrat,sans-serif;
         font-weight: 500;
         color: hsl(228, 12%, 48%);
     }
     p{
-        padding: 6%;
+        margin-left: 6%;
         font-family: Monserrat,sans-serif;
-        font-size: 35px;
         font-weight: 500;
         color:hsl(228, 12%, 48%);  
     }
 /*Precio y descuento*/
 #precioydto{
 display:flex;
-padding-bottom: 30px;
+padding-bottom: 10%;
 }
 #precio{
     
     color: hsl(159, 40%, 34%);
     font-family:Fraunces;
     font-weight: 800;
-    font-size: 60px;
+    font-size: 35px;
     text-align: left;
 
 }
-
+/*descuento*/
 h3{ 
     font-family:Monserrat,sans-serif; 
-    font-size:35px ;
     font-weight: 500;
     padding-top: 9%;
     color: hsl(228, 12%, 48%);
 }
 /*foto perfume*/
 #izquierda{
+width: 300px;
+height: 450px;
 border-top-left-radius:15px;
 border-bottom-left-radius:15px ;
 }
@@ -88,42 +90,48 @@ border-bottom-left-radius:15px ;
     background-color: hsl(158, 36%, 37%);
     color: #FFFFFF;
     border-color: hsl(0, 0%, 0%);
-    font-weight: 600;
+    font-weight: 500;
     border-radius: 10px;
     font-family: Monserrat,sans-serif;
-    font-size: 35px;
-    text-align: center;
-    padding: 15px 60px; 
+    
+    padding: 6px 60px; 
     width:80% ;
     margin-left: 10%;
 }
+#letras{
+    font-size: 16px;
+    color: #FFFFFF;
+    display: inline-block;
+    padding-bottom: 10%;
+    text-decoration: none;
+}
 /*Carrito de compras*/
 #cart{
-    padding: 2%;
     background-color:hsl(158, 36%, 37%) ;
-    width: 30px;
-    height: 30px;
+    width: 15px;
+    height: 15px;
+    margin-top:15px ;
+    margin-right:5px ;
     text-align: center;
 }
 /*al pasar el mouse por encima*/
 .verde:hover{
     background-color: hsl(158, 39%, 25%);
     color: #FFFFFF;
-    border-color: hsl(0, 0%, 0%);
-    font-weight: 600;
+    box-shadow: 3px 3px 3px;
+    border-color: hsl(160, 64%, 14%);
+    font-weight: 500;
     border-radius: 10px;
     font-family: Monserrat,sans-serif;
-    font-size: 35px;
     text-align: center;
-    padding: 15px 60px; 
+    padding: 6px 60px; 
     width:80% ;
     margin-left: 10%;
 }
 #cart:hover{
-    padding: 2%;
     background-color:hsl(158, 39%, 25%) ;
-    width: 30px;
-    height: 30px;
+    width: 15px;
+    height: 15px;
     text-align: center;
 }
 /*Creditos*/
